--- a/boardreact/package.json
+++ b/boardreact/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "totobank",
+  "name": "boardreact",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,12 +9,12 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
-    "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.3.1",
     "react-router": "^6.27.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.2.3",
+    "router": "^1.3.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
